@@ -54,3 +54,16 @@ CREATE TABLE child (
         ON DELETE RESTRICT
         ON UPDATE RESTRICT
 ) ENGINE=InnoDB;
+
+
+DROP TABLE IF EXISTS rubbish;
+CREATE TABLE rubbish (
+    id int(11) NOT NULL AUTO_INCREMENT,
+    PRIMARY KEY (id)
+) ENGINE=InnoDB;
+
+DROP TABLE IF EXISTS trash;
+CREATE TABLE trash (
+    id int(11) NOT NULL AUTO_INCREMENT,
+    PRIMARY KEY (id)
+) ENGINE=InnoDB;
